--- a/.env.template
+++ b/.env.template
@@ -1,10 +1,10 @@
 STAGE=dev
 
-DB_PASSWORD=tesloshop123
+DB_PASSWORD=postgres
 DB_HOST=localhost
 DB_PORT=5432
-DB_NAME=teslo_shop
-DB_USER=teslo_user
+DB_NAME=nest-db
+DB_USER=postgres
 
 PORT=3000
 HOST_API=http://localhost:3000/api
