--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -25,6 +25,7 @@ services:
     volumes:
       - ./:/app
       - /app/node_modules
+      - ./logs:/app/logs
 
   db:
     image: postgres:17-alpine
